[package]
name = "nsq-async-rs"
version = "0.1.3"
edition = "2021"
description = "An asynchronous Rust NSQ client library with support for concurrent message processing"
authors = ["liudiansilv@gmail.com"]
repository = "https://github.com/liudiandesilv/nsq-async-rs"
homepage = "https://github.com/liudiandesilv/nsq-async-rs"
documentation = "https://github.com/liudiandesilv/nsq-async-rs"
license = "MIT"
readme = "README.md"
keywords = ["nsq", "queue", "messaging", "async", "tokio"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["full"]
full = ["discovery"]
discovery = ["reqwest"]

[dependencies]
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
    "macros",
    "io-util",
    "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
byteorder = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
async-trait = "0.1"
hostname = "0.3"
reqwest = { version = "0.12.15", features = ["json"], optional = true }
dashmap = "5.5"
rand = "0.8"
deadpool = "0.12"
anyhow = "1.0"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full", "test-util"] }

[[example]]
name = "consume"
path = "examples/consume/consume.rs"

[[example]]
name = "simple_consume"
path = "examples/consume/simple_consume.rs"

[[example]]
name = "pub_single"
path = "examples/pub/pub_single.rs"

[[example]]
name = "pub_muliti"
path = "examples/pub/pub_muliti.rs"

[[example]]
name = "publish"
path = "examples/pub/publish.rs"

[[example]]
name = "pub_with_deadpool"
path = "examples/pub/pub_with_deadpool.rs"
